add atmega32a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "atmega32u4"]
 	path = atmega32u4
 	url = git@github.com:CaninoDev/atmega32u4_keyboard_KiCAD_template.git
+[submodule "atmega32a"]
+	path = atmega32a
+	url = git@github.com:CaninoDev/atmega32a.git
